<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context="vn.hieunguyen1.appvideo.SignupActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/crv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/su_imgLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@mipmap/video_call" />

            <TextView
                android:id="@+id/su_txtName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/su_edtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/et_input"
                android:hint="@string/edt_name_hint"
                android:drawableStart="@drawable/ic_baseline_person_24"
                android:minHeight="48dp"/>


            <EditText
                android:id="@+id/su_edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/et_input"
                android:hint="@string/edt_email_hint"
                android:minHeight="48dp"
                android:drawableStart="@drawable/ic_baseline_email_24" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/su_edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/et_input"
                    android:drawableStart="@drawable/ic_baseline_lock_24"
                    android:hint="@string/edt_password_hint"
                    android:inputType="textPassword"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/su_eye_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:src="@drawable/show_password_selector"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/su_btnSignup"
                style="@style/bt_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/button_signup" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>