<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context=".DashboardActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/crv_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/main_imgLogo"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@mipmap/video_call_foreground" />

            <TextView
                android:id="@+id/main_txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_title_dashboard"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/db_code"
                style="@style/et_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tv_sc_code_hint"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:minHeight="48dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/main_linearButton"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_btnJoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/bt_login"
                    android:layout_weight="1"
                    android:text="@string/btn_join"
                    android:textColor="@color/white"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/main_btnShare"
                    style="@style/bt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_share"
                    android:textColor="@color/white"
                    android:layout_weight="1"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#D8D4D4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu" />
</androidx.constraintlayout.widget.ConstraintLayout>